Allow a custom $SAGE_LOCAL directory

--- a/configure.ac
+++ b/configure.ac
@@ -80,8 +80,10 @@ fi
 
 # Assume current directory is SAGE_ROOT
 SAGE_ROOT=`pwd -P`
+if test -z "$SAGE_LOCAL"; then
+    SAGE_LOCAL="$SAGE_ROOT/local"
+fi
 SAGE_SRC="$SAGE_ROOT/src"
-SAGE_LOCAL="$SAGE_ROOT/local"
 SAGE_SHARE="$SAGE_LOCAL/share"
 SAGE_EXTCODE="$SAGE_SHARE/sage/ext"
 SAGE_SPKG_INST="$SAGE_LOCAL/var/lib/sage/installed"
@@ -988,10 +990,6 @@ AC_CONFIG_MACRO_DIR([m4])
 dnl Create basic directories needed for Sage
 AC_CONFIG_COMMANDS(mkdirs,
     [
-        SAGE_LOGS=${ac_abs_top_builddir}/logs/pkgs
-        SAGE_LOCAL=${ac_abs_top_builddir}/local
-        SAGE_SHARE=${ac_abs_top_builddir}/local/share
-        SAGE_INST=${ac_abs_top_builddir}/local/var/lib/sage/installed
         for d in "$SAGE_LOGS" "$SAGE_LOCAL" \
             "$SAGE_LOCAL/bin" "$SAGE_LOCAL/etc" \
             "$SAGE_LOCAL/include" "$SAGE_LOCAL/lib" \
@@ -1009,6 +1007,12 @@ AC_CONFIG_COMMANDS(mkdirs,
             AC_MSG_NOTICE([[creating symbolic link lib64 -> lib]])
             ln -s lib "$SAGE_LOCAL/lib64"
         fi
+    ],
+    [
+        SAGE_LOGS="$SAGE_ROOT/logs/pkgs"
+        SAGE_LOCAL="$SAGE_LOCAL"
+        SAGE_SHARE="$SAGE_SHARE"
+        SAGE_INST="$SAGE_SPKG_INST"
     ])
 
 AC_OUTPUT()
