--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -1,20 +1,38 @@
+# @configure_input@
+
+abs_builddir = @abs_builddir@
+srcdir = @srcdir@
+abs_top_srcdir = @abs_top_srcdir@
+
 .PHONY: all sage clean
 
 all: sage
 
-# SAGE_BUILD_DIR set by src/bin/sage-env
-ifndef SAGE_BUILD_DIR
-$(error SAGE_BUILD_DIR not set. Use top-level Makefile!)
-endif
+## All sagelib-building is done by setup.py.
+## DON'T ADD ADDITIONAL STEPS TO THIS MAKEFILE.
+
+## We poison all environment variables that have paths to the sage source and build directories,
+## but keep the directories below SAGE_LOCAL intact.
+## In this way we make sure that all of the sagelib build's source/build paths are communicated through
+## the current directory (for the source tree) and --build-base.
+##
+## As a special exception, we feed SAGE_PKGS.  This is needed by src/sage_setup/optional_extension.py
+## via src/sage/misc/package.py.  Hoping that #20382 will make this unnecessary.
+##
+## TODO: Do also something about the SAGE_LOCAL stuff:
+##  - some of it (our install) should be communicated only through --install-base;
+##  - others (installed packages that we pull in) through some configuration mechanism.
+##
+## TODO: Currently providing --install-base=$(SAGE_LOCAL) leads to this error:
+## [sagelib-7.4.beta4] running install
+## [sagelib-7.4.beta4] error: install-base or install-platbase supplied, but installation scheme is incomplete
 sage:
-	python -u setup.py build --build-base=$(SAGE_BUILD_DIR)/sagelib install
+	(cd $(srcdir) && export SAGE_ROOT=/doesnotexist SAGE_SRC=/doesnotexist SAGE_SRC_ROOT=/doesnotexist SAGE_DOC_SRC=/doesnotexist SAGE_SCRIPTS_DIR=/doesnotexist SAGE_BUILD_DIR=/doesnotexist SAGE_CYTHONIZED=/doesnotexist SAGE_PKGS=$(abs_top_srcdir)/build/pkgs && python -u setup.py build --build-base=$(abs_builddir)/build-sagelib install)
 
 clean:
 	@echo "Deleting Sage library build artifacts..."
 	rm -rf c_lib build .cython_version # from old sage versions
-	rm -rf $(SAGE_BUILD_DIR)/sagelib
+	rm -rf build-sagelib
 	find . -name '*.pyc' | xargs rm -f
 	rm -f sage/libs/pari/auto_*
 	rm -rf sage/ext/interpreters
-
-
