--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -9,7 +9,9 @@ abs_top_srcdir = @abs_top_srcdir@
 all: sage
 
 ## All sagelib-building is done by setup.py.
-## DON'T ADD ADDITIONAL STEPS TO THIS MAKEFILE.
+## This is so that sagelib can be installed by standard Python procedures,
+## such as "./setup.py install" or "pip install ."
+## BECAUSE OF THIS, DON'T ADD ADDITIONAL STEPS TO THIS MAKEFILE.
 
 ## We poison all environment variables that have paths to the sage source and build directories,
 ## but keep the directories below SAGE_LOCAL intact.
