--- a/src/Makefile.in
+++ b/src/Makefile.in
@@ -15,8 +15,10 @@ all: sage
 
 ## We poison all environment variables that have paths to the sage source and build directories,
 ## but keep the directories below SAGE_LOCAL intact.
-## In this way we make sure that all of the sagelib build's source/build paths are communicated through
-## the current directory (for the source tree) and --build-base.
+## In this way we make sure that all of the sagelib build's source paths are communicated through
+## the current directory (for the source tree).
+## Building takes places in the build/ subdirectory.
+## The environment variable SAGE_CYTHONIZED needs to point to build/cythonized.
 ##
 ## As a special exception, we feed SAGE_PKGS.  This is needed by src/sage_setup/optional_extension.py
 ## via src/sage/misc/package.py.  Hoping that #20382 will make this unnecessary.
@@ -36,14 +38,14 @@ sage:
 		   SAGE_DOC_SRC=/doesnotexist							\
 		   SAGE_SCRIPTS_DIR=/doesnotexist						\
 		   SAGE_BUILD_DIR=/doesnotexist							\
-		   SAGE_CYTHONIZED=/doesnotexist						\
 		   SAGE_PKGS=$(abs_top_srcdir)/build/pkgs					\
-	 && python -u setup.py build --build-base=$(abs_builddir)/build-sagelib install)
+		   SAGE_CYTHONIZED=$(abs_builddir)/build/cythonized				\
+	 && python -u setup.py build install)
 
 clean:
 	@echo "Deleting Sage library build artifacts..."
-	rm -rf c_lib build .cython_version # from old sage versions
-	rm -rf build-sagelib
+	rm -rf c_lib .cython_version # from old sage versions
+	rm -rf build
 	find . -name '*.pyc' | xargs rm -f
 	rm -f sage/libs/pari/auto_*
 	rm -rf sage/ext/interpreters
