Added a whole introduction introducing ribbon graphs. More and more docstrings. This is coming to an end...

--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,6 @@ xcuserdata/
 .metadata
 *.tmp
 *.bak
-*.swp
 *~.nib
 .classpath
 .settings/
@@ -81,3 +80,4 @@ $RECYCLE.BIN/
 ###########
 .ipynb_checkpoints
 Untitled*.ipynb
+*.directory
