reverted changes on .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -46,6 +46,7 @@ xcuserdata/
 .metadata
 *.tmp
 *.bak
+*.swp
 *~.nib
 .classpath
 .settings/
@@ -80,4 +81,3 @@ $RECYCLE.BIN/
 ###########
 .ipynb_checkpoints
 Untitled*.ipynb
-*.directory
